[feature]
[feature] All Unit Tests added, Controller reworked and Security Configured
