# src/main/java/com/ubs/m295_projectapplication/controller/TeamController.java
@@ -3,6 +3,7 @@ package com.ubs.m295_projectapplication.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ubs.gen.controller.TeamApi;
 import com.ubs.gen.module.Team;
+import com.ubs.gen.module.TeamRequest;
 import com.ubs.m295_projectapplication.jdbc.TeamDao;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataAccessException;
@@ -11,6 +12,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpServletRequest;
 import java.sql.SQLException;
+import java.util.List;
 import java.util.Optional;
 
 @RestController
@@ -38,18 +40,36 @@ public class TeamController extends AbstractController implements TeamApi {
     }
 
 
-
+    @Override
+    public ResponseEntity<List<Team>> getTeams() {
+        try {
+            if(log.isDebugEnabled()) {
+                log.debug("Getting teams");
+            }
+            log.info("Getting teams...");
+            List<Team> teams = teamDao.getAllTeams();
+            log.info("Teams retrieved...");
+            return okRespond(teams);
+        } catch (DataAccessException exception) {
+            log.warn("Error getting teams", exception);
+            throwBadRequest("Error getting teams", exception);
+        } catch (Exception exception) {
+            log.error("Critical error getting teams", exception);
+            throwInternalServerError("Critical error getting teams", exception);
+        }
+        return null;
+    }
 
     @Override
-    public ResponseEntity<Team> createTeam(Team body) {
+    public ResponseEntity<Integer> createTeam(TeamRequest body) {
         try {
             if (log.isDebugEnabled()) {
                 log.debug("Creating team: {}", body);
             }
             log.info("Creating team...");
-            teamDao.addTeam(body);
+            int id = teamDao.addTeam(body);
             log.info("Team created...");
-            return okRespond(body);
+            return okRespond(id);
         } catch (SQLException exception) {
             log.warn("Error creating team", exception);
             throwBadRequest("Error creating team", exception);
@@ -100,16 +120,16 @@ public class TeamController extends AbstractController implements TeamApi {
     }
 
     @Override
-    public ResponseEntity<Team> updateTeam(Integer teamId, Team body) {
+    public ResponseEntity<Team> updateTeam(Integer teamId, TeamRequest body) {
         try {
             if (log.isDebugEnabled()) {
                 log.debug("Updating team: {}", body);
             }
             log.info("Updating team...");
-            body.setTeamId(teamId);
-            teamDao.updateTeam(body);
+
+            teamDao.updateTeam(teamId, body);
             log.info("Team updated...");
-            return okRespond(body);
+            return okRespond(teamDao.getTeamById(teamId));
         } catch (DataAccessException exception) {
             log.warn("Error updating team", exception);
             log.warn("Error updating team", exception);
