# src/main/resources/api.yaml
@@ -40,20 +40,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Team'
+              $ref: '#/components/schemas/TeamRequest'
+
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Team'
+                type: integer
+                format: int32
         '400':
           description: Invalid Request supplied
         '500':
           description: Critical error
 
-  /team/{teamId}:
+  /team/admin/{teamId}:
     get:
       tags:
         - team
@@ -97,7 +99,7 @@ paths:
           content:
               application/json:
                   schema:
-                      $ref: '#/components/schemas/Team'
+                      $ref: '#/components/schemas/TeamRequest'
       responses:
           '200':
               description: Successful operation
@@ -169,19 +171,20 @@ paths:
             content:
               application/json:
                   schema:
-                      $ref: '#/components/schemas/TeamMember'
+                      $ref: '#/components/schemas/TeamMemberRequest'
         responses:
             '200':
               description: Successful operation
               content:
                 application/json:
                   schema:
-                    $ref: '#/components/schemas/TeamMember'
+                    type: integer
+                    format: int32
             '400':
               description: Invalid Request supplied
             '500':
               description: Critical error
-  /teamMember/{memberId}:
+  /teamMember/admin/{memberId}:
     get:
       tags:
         - teamMember
@@ -226,7 +229,7 @@ paths:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/TeamMember'
+                        $ref: '#/components/schemas/TeamMemberRequest'
         responses:
             '200':
                 description: Successful operation
@@ -280,6 +283,15 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Software'
+              example:
+                - name: "Software 1"
+                  description: "Software 1 description"
+                  version: "1.0.0"
+                  teamId: 1
+                - name: "Software 2"
+                  description: "Software 2 description"
+                  version: "1.0.0"
+                  teamId: 1
         '400':
           description: Invalid Request supplied
         '404':
@@ -298,21 +310,22 @@ paths:
             content:
               application/json:
                   schema:
-                      $ref: '#/components/schemas/Software'
+                      $ref: '#/components/schemas/SoftwareRequest'
         responses:
             '200':
               description: Successful operation
               content:
                 application/json:
                   schema:
-                    $ref: '#/components/schemas/Software'
+                    type: integer
+                    format: int32
             '400':
               description: Invalid Request supplied
             '500':
               description: Critical error
 
 
-  /software/{softwareId}:
+  /software/admin/{softwareId}:
     get:
       tags:
         - software
@@ -354,7 +367,7 @@ paths:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/Software'
+                        $ref: '#/components/schemas/SoftwareRequest'
         responses:
             '200':
                 description: Successful operation
@@ -424,19 +437,20 @@ paths:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/Project'
+                        $ref: '#/components/schemas/ProjectRequest'
         responses:
             '200':
                 description: Successful operation
                 content:
                   application/json:
                     schema:
-                      $ref: '#/components/schemas/Project'
+                      type: integer
+                      format: int32
             '400':
                 description: Invalid Request supplied
             '500':
                 description: Critical error
-  /project/{projectId}:
+  /project/admin/{projectId}:
     get:
       tags:
         - project
@@ -480,7 +494,7 @@ paths:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/Project'
+                        $ref: '#/components/schemas/ProjectRequest'
         responses:
             '200':
                 description: Successful operation
@@ -520,6 +534,11 @@ paths:
 components:
   schemas:
     TeamMember:
+      required:
+        - name
+        - firstname
+        - joinDate
+        - team
       type: object
       properties:
         memberId:
@@ -538,6 +557,10 @@ components:
         team:
           $ref: '#/components/schemas/Team'
     Team:
+      required:
+        - budget
+        - teamName
+        - teamMembers
       type: object
       properties:
         teamId:
@@ -557,6 +580,12 @@ components:
             $ref: '#/components/schemas/TeamMember'
 
     Software:
+      required:
+        - softwareName
+        - softwareVersion
+        - team
+        - project
+        - status
       type: object
       properties:
         softwareId:
@@ -582,6 +611,8 @@ components:
             - development
             - planning
     Project:
+      required:
+        - projectName
       type: object
       properties:
         projectId:
@@ -591,3 +622,82 @@ components:
         projectName:
             type: string
             example: Project 1
+    TeamRequest:
+      required:
+        - teamName
+        - budget
+      type: object
+      properties:
+        teamName:
+          type: string
+          example: Team 1
+        budget:
+          type: number
+          format: double
+          example: 96.00
+    SoftwareRequest:
+        required:
+            - softwareId
+            - softwareName
+            - softwareVersion
+            - teamId
+            - projectId
+            - status
+        type: object
+        properties:
+            softwareId:
+              type: string
+              example: AOP
+            softwareName:
+              type: string
+              example: Application One Project
+            softwareVersion:
+              type: string
+              example: 1.0.0
+            teamId:
+              type: integer
+              format: int32
+              example: 10
+            projectId:
+              type: integer
+              format: int32
+              example: 10
+            status:
+                type: string
+                description: Order Status
+                example: approved
+                enum:
+                    - deployed
+                    - testing
+                    - development
+                    - planning
+    ProjectRequest:
+        required:
+            - projectName
+            - teamId
+        type: object
+        properties:
+            projectName:
+              type: string
+              example: Project 1
+    TeamMemberRequest:
+        required:
+            - name
+            - firstname
+            - joinDate
+            - teamId
+        type: object
+        properties:
+            name:
+              type: string
+              example: Smith
+            firstname:
+              type: string
+              example: John
+            joinDate:
+              type: string
+              format: date-time
+            teamId:
+              type: integer
+              format: int32
+              example: 10
